--- a/src/views/schedule/index.css
+++ b/src/views/schedule/index.css
@@ -2,4 +2,7 @@ h2 {
   text-align:center;
   padding-bottom: 25px;
   padding-top: 25px;
+  color: #020f72;
+  text-decoration: underline;
+  text-decoration-color: #4286f4;
 }
