--- a/src/views/home/index.css
+++ b/src/views/home/index.css
@@ -4,3 +4,8 @@
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
+
+.cent {
+  text-align: center;
+  color: #020f72;
+}
